<resources>
    <string name="app_name">OctoDrive</string>

    <!-- LoginActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up_instead">New user? Sign up instead &gt;</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="error_invalid_password">Password too short.</string>
    <string name="error_incorrect_password">Password is incorrect.</string>
    <string name="error_field_required">Field is required.</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="dialog_authenticating">Authenticating…</string>

    <!-- RegisterActivity -->
    <string name="prompt_name">Name</string>
    <string name="error_invalid_name">Name too short.</string>
    <string name="error_unknown_occurred">Unknown error occurred.</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_instead">Already registered? Sign in instead &gt;</string>
    <string name="dialog_registering">Registering…</string>

    <!-- MainActivity -->
    <string name="button_practice">Practice</string>
    <string name="button_exam">Exam</string>

    <!-- QuestionActivity -->
    <string name="error_invalid_intent">Internal session error.</string>
    <string name="dialog_preparing">Preparing…</string>
    <string name="dialog_processing">Processing…</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="error_fetch_question">Failed to get questions.</string>
    <string name="error_db_comm">Failed to communicate with database.</string>
    <string name="error_last_question">This is the last question.</string>
    <string name="error_first_question">This is the first question.</string>
    <string name="error_need_one">You need to select at least one answer.</string>

    <!-- FinishActivity -->
    <string name="text_failed">You failed.</string>
    <string name="text_passed">You passed!</string>
    <string name="text_correct_ans">Correctly answered %1$d out of %2$d questions.</string>

    <!-- AdminActivity -->
    <string name="title_activity_admin">Administration</string>
    <string name="admin_page_title_users">USERS</string>
    <string name="admin_page_title_questions">QUESTIONS</string>
    <string name="admin_page_title_settings">SETTINGS</string>
    <string name="action_new">New</string>

    <!-- SettingsFragment -->
    <string name="title_activity_question_details">Question Management</string>
    <string name="text_question_count">Questions per test</string>
    <string name="text_minimum_pass">Questions required to pass</string>
    <string name="dialog_loading">Loading…</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="action_settings">Settings</string>
    <string name="button_save">Save</string>

    <!-- QuestionDetailsActivity -->
    <string name="prompt_question_message">Question</string>
    <string name="prompt_question_answer1">A</string>
    <string name="prompt_question_answer2">B</string>
    <string name="prompt_question_answer3">C</string>
    <string name="question_edit_correct">Correct:</string>
    <string name="question_edit_active">Active</string>
    <string name="question_edit_change">Change…</string>
    <string name="question_edit_language">Language:</string>
    <string name="question_edit_image">Image:</string>
    <string name="action_save">Save</string>
    <string name="dialog_uploading">Uploading…</string>
    <string name="one_must_be_correct">At least one answer has to be set as correct</string>

    <!-- UserDetailsActivity -->
    <string name="user_details_name">Name:</string>
    <string name="user_details_email">Email:</string>
    <string name="user_details_admin">Admin</string>
    <string name="user_details_result_date"><b>Date</b></string>
    <string name="user_details_result_score"><b>Score</b></string>

</resources>
