<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_practice"
        android:id="@+id/button_practice"
        android:layout_alignStart="@+id/button_exam"
        android:layout_alignEnd="@+id/button_exam" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_exam"
        android:id="@+id/button_exam"
        android:layout_below="@+id/button_practice"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@+id/button_admin"
        android:layout_alignStart="@+id/button_admin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_admin"
        android:id="@+id/button_admin"
        android:layout_below="@+id/button_exam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="invisible" />

</RelativeLayout>
