<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.dreamteam.octodrive.activity.LoginActivity">

    <ScrollView
        android:id="@+id/question_edit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question_edit_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_question_message"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question_edit_answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_question_answer1"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question_edit_answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_question_answer2"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/question_edit_answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_question_answer3"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/message_question_correct"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/question_edit_correct"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/prompt_question_answer1"
                    android:id="@+id/checkBox_correct_answer1"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/prompt_question_answer2"
                    android:id="@+id/checkBox_correct_answer2"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/prompt_question_answer3"
                    android:id="@+id/checkBox_correct_answer3"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/question_edit_language"
                    android:id="@+id/textView2"/>

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/spinner"/>
            </LinearLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/question_edit_image"
                    android:id="@+id/textView4"/>

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imageButton"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView4"
                    android:layout_marginStart="10dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:text="@string/question_edit_active"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/activeCheckBox"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>


    <!--&lt;!&ndash; TODO: MOVE FAV OVER TO LISTFRAGMENT&ndash;&gt;-->
    <!--&lt;!&ndash;<android.support.design.widget.FloatingActionButton&ndash;&gt;-->
    <!--&lt;!&ndash;android:id="@+id/fab"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_gravity="bottom|end"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_margin="@dimen/fab_margin"&ndash;&gt;-->
    <!--&lt;!&ndash;android:src="@android:drawable/ic_dialog_email"/>&ndash;&gt;-->