<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dreamteam.octodrive.activity.admin.SettingsFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_question_count"
            android:layout_weight="3"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView"/>

        <EditText
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText_questionCount"
            android:gravity="center"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_minimum_pass"
            android:layout_weight="3"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView2"/>

        <EditText
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText_minimumPass"
            android:gravity="center"
            android:layout_gravity="right"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/button_save"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
